sampleWebsite/1-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-website-deployment
  labels:
    app: sample-website-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sample-website-app
  template:
    metadata:
      labels:
        app: sample-website-app
    spec:
      containers:
      - name: nginx-container
        image: nginx
        ports:
        - containerPort: 80
