sampleWebsite/2-service.yml
apiVersion: v1
kind: Service
metadata:
  name: sample-website-service
spec:
  selector:
    app: sample-website-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
