sampleWebsite/3-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: sample-website-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: cluster.k8s
    http:
      paths:
      - path: /website
        backend:
          serviceName: sample-website-service
          servicePort: 80
